# tez

./: .ninja_deps  .ninja_log  CMakeLists.txt  README.md
doc/: basic_everything.md  coding_conventions.md  conding_conventions.md  control_flow.md  functions.md  operators.md
src/: ast.h  c_code_gen.cc  c_code_gen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  token.cc  token.h  utilities.h
src/codegen/: c_code_generator.cc  c_code_generator.h
src/semantic/: code_manager.cc  code_manager.h  semantic_analyser.cc  semantic_analyser.h  semantic_analyzer.cc  semantic_analyzer.h  symbol_table.cc  symbol_table.h
src/syntax/: ast.cc  ast.h  lexer.cc  lexer.h  parser.cc  parser.h  token.cc  token.h
src/utils/: string_stack.h
test/: lexer_test.cc  parser_test.cc  string_stack_test.cc
